--- a/MVC_web/Web.config
+++ b/MVC_web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SalesERPDAL" connectionString="Data Source=KISHOR-SURFACEP\MSSQLSERVER14;Initial Catalog=SalesERPDB;Integrated Security=True"  providerName="System.Data.SqlClient" />
+    <add name="SalesERPDAL" connectionString="Data Source=ITH-143;Initial Catalog=SalesERPDB;Integrated Security=True"  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,7 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+   <authentication mode="Forms">
+      <forms loginUrl="~/Authentication/Login"></forms>
+</authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
